--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,7 @@
   <script src="/static/vendor/htmx.min.js" defer></script>
   {% else %}
   <script src="https://unpkg.com/htmx.org@1.9.12" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.9/dist/cdn.min.js" defer></script>
   {% endif %}
   <title>{{ title }}</title>
 </head>
