Fix library drawer scripts

--- a/app/templates/partials/tags_tab_content.html
+++ b/app/templates/partials/tags_tab_content.html
@@ -417,3 +417,7 @@
     {% endif %}
   {% endcall %}
 </div>
+{% if use_local_assets %}
+<script src="/static/js/drawer.js" defer></script>
+<script src="/static/js/tags.js" defer></script>
+{% endif %}
