Add Elasticsearch node connector

--- a/app/templates/partials/connectors_overview_tab_content.html
+++ b/app/templates/partials/connectors_overview_tab_content.html
@@ -28,6 +28,12 @@
           <td>Available</td>
           <td>Open the <a class="link" href="/ui/connectors?tab=prometheus">Prometheus tab</a> to run dry-run/apply imports from PromQL results.</td>
         </tr>
+        <tr>
+          <td>Elasticsearch</td>
+          <td>Node inventory import</td>
+          <td>Available</td>
+          <td>Open the <a class="link" href="/ui/connectors?tab=elasticsearch">Elasticsearch tab</a> to run dry-run/apply imports from cluster nodes.</td>
+        </tr>
       </tbody>
     </table>
   </div>
